# libvrb

./: CMakeLists.txt  README.debian  README.md  changelog  configure  control  copyright  coverity-results.json  libvrb0-dev.links  libvrb0-dev.manpages  libvrb0.install  libvrb0.links  rules  vbuf.1  vbuf.install  vbuf.links  vbuf.manpages  watch
